force-app/main/default/objects/SpecialCalculationFormula__c/SpecialCalculationFormula__c.object-meta.xml
<CustomObject>
    <description>特殊計算の計算式を定義する。</description>
    <label>特殊計算式</label>
    <nameField>
        <displayFormat>SCF-{0000}</displayFormat>
        <label>特殊計算式番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>