force-app/main/default/objects/SpecialCalculationFormula__c/fields/Addition__c.field-meta.xml
<CustomField>
    <fullName>Addition__c</fullName>
    <formula>SpecialCalculationMaster__r.Addition__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>加算値</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>