force-app/main/default/objects/SpecialCalculationFormula__c/fields/Multiplication__c.field-meta.xml
<CustomField>
    <fullName>Multiplication__c</fullName>
    <formula>SpecialCalculationMaster__r.Multiplication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>乗算値</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>