force-app/main/default/objects/SpecialCalculationFormula__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <formula>SpecialCalculationMaster__r.Remarks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>特殊計算</label>
    <type>Text</type>
</CustomField>