force-app/main/default/objects/SpecialCalculationFormula__c/fields/SpecialCalculationMaster__c.field-meta.xml
<CustomField>
    <fullName>SpecialCalculationMaster__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>特殊計算マスタ</label>
    <referenceTo>SpecialCalculationMaster__c</referenceTo>
    <relationshipLabel>特殊計算式</relationshipLabel>
    <relationshipName>SpecialCalculationFormulas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>