force-app/main/default/objects/SpecialCalculationFormula__c/fields/SpecialCalculationPattern__c.field-meta.xml
<CustomField>
    <fullName>SpecialCalculationPattern__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>特殊計算パターン</label>
    <referenceTo>SpecialCalculationPattern__c</referenceTo>
    <relationshipLabel>特殊計算式</relationshipLabel>
    <relationshipName>SpecialCalculationFormulas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>